--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
                 <div class="inner">
                     <div class="create-playlist">
-                        <h2 class="h2">Create Your first playlist</h2>
-                        <p class="p">It's easy, we'll help you</p>
+                        <h2 class="h2" class="c-1">Create Your first playlist</h2>
+                        <p class="p" class="c-1">It's easy, we'll help you</p>
                         <button class="playlistBtn">Create playlist</button>
                     </div>
                     <div class="podcasts">
